# tfg-movies-recsys

./: .env.example  .gitattributes  .gitignore  README.md  build.gradle.kts  docker-compose.yml  gradle.properties  pyproject.toml  settings.gradle.kts
.run/: Backend (Ktor).run.xml  Database (down).run.xml  Database (up).run.xml  Frontend (Compose JS).run.xml
composeApp/: build.gradle.kts
data/: poster_paths_backup.csv
docs/memoria/: 02_intro_tecnologias.md  04_desarrollo_7_1.md  07_desarrollo_7_3_1.md  07_desarrollo_7_3_2.md  07_desarrollo_7_3_3.md  07_desarrollo_7_3_4.md  07_desarrollo_7_3_5.md  08_conclusiones.md  TFG_Bloque1_Definicion.md  TFG_Desarrollo_7_2_extendido.md
gradle/: libs.versions.toml
migrations/: 2026052500_init_extensions.sql  2026052501_create_movies_and_collections.sql  2026052502_create_people_and_credits.sql  2026052503_create_categories.sql  2026052504_create_external_ids.sql  2026052505_create_embeddings.sql  2026052600_create_movie_details_view.sql  2026052601_add_listing_indexes.sql  2026052602_add_search_indexes.sql  2026052700_evolve_movie_embeddings.sql  2026052701_add_embedding_hnsw_index.sql  2026052702_resize_embeddings_to_786.sql  2026052703_recreate_hnsw_index_768.sql
python/scripts/: 01_inspect_raw.py  02_clean_movies.py  03_clean_credits.py  04_clean_keywords.py  05_clean_links.py  06_run_pipeline.py  07_migrate.py  08_load_movies.py  09_load_categories.py  10_load_credits.py  11_load_links.py  12_run_load_pipeline.py  13_generate_embeddings.py  (+1 more)
server/: build.gradle.kts
shared/: build.gradle.kts
(+43 files in other folders)
