[project]
name = "tfg-movies-recsys"
version = "0.1.0"
description = "Plataforma de análisis y recomendación de películas — TFG DAM"
requires-python = ">=3.12"
dependencies = [
    "pandas>=2.2",
    "numpy>=2.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
package = false
