[project]
name = "tfg-movies-recsys"
version = "0.1.0"
description = "Plataforma de análisis y recomendación de películas — TFG DAM"
requires-python = ">=3.12"
dependencies = [
    "pandas>=2.2",
    "numpy>=2.1",
    "psycopg[binary]>=3.3.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["python/src"]

[tool.uv]
package = true
